--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="header">
             <h2>Dane's To-Do List</h2>
             <div class="navigation">
-                <button id="pending-tasks" class="active">Home</a>
-                <button id="completed-tasks">Completed</a>
-                <button id="trash-tasks" onclick="trashTasks()">Trash</a>
+                <button id="pending-tasks" class="active"><i class="fas fa-pencil-alt"></i> Pending</a>
+                <button id="completed-tasks"><i class="fas fa-check-double"></i> Completed</a>
+                <button id="trash-tasks"><i class="fas fa-trash-alt"></i> Trash</a>
             </div>
             <div id="new-task" class="new-task">
                 <input type="text" id="task" placeholder="Task to be done...">
