--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 
         pendingTasks();
 
+        window.addEventListener("load", scaleBody);
+        window.addEventListener("resize", scaleBody);
+
         pending_btn.addEventListener("click", function() {
             pending_btn.classList.add("active");
             completed_btn.classList.remove("active");
@@ -102,17 +105,26 @@
         }
 
         function formatTimestamp(timestamp) {
-                const date = timestamp.toDate();
-                return date.toLocaleString("en-US", {
-                    month: "long",
-                    day: "numeric",
-                    year: "numeric",
-                    hour: "numeric",
-                    minute: "2-digit",
-                    second: "2-digit",
-                    hour12: true
-                });
+            const date = timestamp.toDate();
+            return date.toLocaleString("en-US", {
+                month: "long",
+                day: "numeric",
+                year: "numeric",
+                hour: "numeric",
+                minute: "2-digit",
+                second: "2-digit",
+                hour12: true
+            });
+        }
+
+        function scaleBody() {
+            if (window.innerWidth <= 510) {
+                let scaleValue = (window.innerWidth / 490);
+            
+                document.body.style.transform = `scale(${scaleValue})`;
+                document.body.style.transformOrigin = "top center";
             }
+        }
 
         async function pendingTasks() {
             const querySnapshot = await getDocs(collection(db, "todo-list"));
