--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         const new_task = document.getElementById("new-task");
         const tasks = document.getElementById("tasks");
 
+        scaleBody();
         pendingTasks();
 
         window.addEventListener("load", scaleBody);
@@ -96,6 +97,15 @@
             trashTasks();
         });
 
+        function scaleBody() {
+            if (window.innerWidth <= 510) {
+                let scaleValue = (window.innerWidth / 470);
+            
+                document.body.style.transform = `scale(${scaleValue})`;
+                document.body.style.transformOrigin = "top center";
+            }
+        }
+
         async function showLoader() {
             tasks.innerHTML = "";
             tasks.innerHTML = tasks.innerHTML + `<div id="loader" class="loader">
@@ -115,15 +125,6 @@
                 second: "2-digit",
                 hour12: true
             });
-        }
-
-        function scaleBody() {
-            if (window.innerWidth <= 510) {
-                let scaleValue = (window.innerWidth / 490);
-            
-                document.body.style.transform = `scale(${scaleValue})`;
-                document.body.style.transformOrigin = "top center";
-            }
         }
 
         async function pendingTasks() {
