--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
             if (!hasRemovedTasks || querySnapshot.empty) {
                 tasks.innerHTML = `<div class="task">
-                    <span class="no-task">No task in the trash.</span>
+                    <span class="no-task">No tasks in the trash.</span>
                 </div>`;
             }
         }
