--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h2>Dane's To-Do List</h2>
+            <h2>Dane's To-Do List 📝</h2>
             <div class="navigation">
                 <button id="pending-tasks" class="active"><i class="fas fa-pencil-alt"></i> Pending</a>
                 <button id="completed-tasks"><i class="fas fa-check-double"></i> Completed</a>
