--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 <button id="trash-tasks"><i class="fas fa-trash-alt"></i> Trash</a>
             </div>
             <div id="new-task" class="new-task">
-                <input type="text" id="task" placeholder="Task to be done...">
+                <input type="hidden" id="task-id">
+                <input type="text" id="task" placeholder="Task to be done..." autocomplete="off">
+                <button id="edit-task-btn" style="display: none;"><i class="fas fa-times-circle"></i></button>
                 <button onclick="submitTask()">Submit</button>
             </div>
         </div>
@@ -38,7 +40,7 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-analytics.js";
         import {
-            getFirestore, collection, getDocs, doc, query, orderBy, addDoc, serverTimestamp, updateDoc, deleteDoc
+            getFirestore, collection, getDocs, doc, query, orderBy, addDoc, serverTimestamp, getDoc, updateDoc, deleteDoc
         } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-firestore.js";
 
         const firebaseConfig = {
@@ -60,6 +62,7 @@
         const trash_btn = document.getElementById("trash-tasks");
 
         const new_task = document.getElementById("new-task");
+        const edit_task_btn = document.getElementById("edit-task-btn");
         const tasks = document.getElementById("tasks");
 
         pendingTasks();
@@ -73,6 +76,7 @@
             trash_btn.classList.remove("active");
             new_task.style.display = "flex";
 
+            clearSubmitTask();
             showLoader();
             pendingTasks();
         });
@@ -84,6 +88,7 @@
             trash_btn.classList.remove("active");
             new_task.style.display = "none";
 
+            clearSubmitTask();
             showLoader();
             completedTasks();
         });
@@ -95,8 +100,13 @@
             trash_btn.classList.add("active");
             new_task.style.display = "none";
 
+            clearSubmitTask();
             showLoader();
             trashTasks();
+        });
+
+        edit_task_btn.addEventListener("click", function() {
+            clearSubmitTask();
         });
 
         async function showLoader() {
@@ -104,6 +114,12 @@
                 <span class="loader-text">loading</span>
                 <span class="load"></span>
             </div>`;
+        }
+
+        async function clearSubmitTask() {
+            document.getElementById("task-id").value = "";
+            document.getElementById("task").value = "";
+            edit_task_btn.style.display = "none";
         }
 
         function formatTimestamp(timestamp) {
@@ -136,6 +152,7 @@
                         <span class="timestamp">${formatTimestamp(data.timestamp)}</span>
                         <div class="buttons">
                             <button onclick="completeTask('${doc.id}')"><i class="fas fa-check-circle"></i></button>
+                            <button onclick="editTask('${doc.id}')"><i class="fas fa-edit"></i></button>
                             <button onclick="removeTask('${doc.id}')"><i class="fas fa-trash-alt"></i></button>
                         </div>
                     </div>`;
@@ -206,19 +223,31 @@
         }
 
         window.submitTask = async function submitTask() {
+            let taskId = document.getElementById("task-id");
             let taskInput = document.getElementById("task");
+            
             if (taskInput.value == "") {
                 alert("Please input task.");
             }
             else {
                 showLoader();
-                await addDoc(collection(db, "todo-list"), {
-                    task: taskInput.value,
-                    status: "pending",
-                    timestamp: serverTimestamp()
-                });
+                if (taskId.value == "") {
+                    await addDoc(collection(db, "todo-list"), {
+                        task: taskInput.value,
+                        status: "pending",
+                        timestamp: serverTimestamp()
+                    });
+                }
+                else {
+                    const taskRef = doc(db, "todo-list", taskId.value);
 
-                taskInput.value = "";
+                    await updateDoc(taskRef, {
+                        task: taskInput.value,
+                        timestamp_update: serverTimestamp()
+                    });
+                }
+
+                clearSubmitTask();
                 pendingTasks();
             }
         }
@@ -235,6 +264,22 @@
                 });
 
                 pendingTasks();
+            }
+        }
+
+        window.editTask = async function editTask(id) {            
+            const taskRef = doc(db, "todo-list", id);
+            const taskSnap = await getDoc(taskRef);
+
+            if (taskSnap.exists()) {
+                const taskData = taskSnap.data();
+
+                document.getElementById("task-id").value = id;
+                document.getElementById("task").value = taskData.task;
+                edit_task_btn.style.display = "block";
+            }
+            else {
+                alert("No such task found!");
             }
         }
 
