--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="static/img/icon.png">
     <link rel="apple-touch-icon" href="static/img/icon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pixelify Sans">
+    <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Poppins'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="static/css/main.css">
     <link rel="stylesheet" href="static/css/loader.css">
