--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             pendingTasks();
                         }
                         else {
-                            alert("No changes were made to the task name.");
+                            alert("No changes were made.");
                         }
                     }
                     else {
